--- a/example.bib
+++ b/example.bib
@@ -57,6 +57,13 @@
     year = {1986},
     publisher ={Clarendon Express, Oxford}
 } 
+@BOOK{Hiemenz1997,
+    author = {Hiemenz, Paul C. and Rajagopalan, Raj.},
+    title = {{Principles of Colloid and Surface Chemistry}},
+    edition ={3},
+    year = {1997},
+    publisher ={New York: Marcel Dekker, Inc,}
+} 
 @ARTICLE{Levy1979,
     author = {M. Levy},
     title = {{Universal Variational Functionals of Electron Densities, First-Order Density Matrices, and Natural Spin-Orbitals and Solution of the v-Representability Problem}},
@@ -142,16 +149,6 @@
     doi  ="10.1039/B806516K",
     url  ="http://dx.doi.org/10.1039/B806516K",
     abstract  ="We discuss the role of the presence of dangling H-bonds from water or from surface hydroxyl species on the wetting behavior of surfaces. Using scanning tunneling and atomic force microscopies and photoelectron spectroscopy{,} we have examined a variety of surfaces{,} including mica{,} oxides and pure metals. We find that in all cases{,} the availability of free{,} dangling H-bonds at the surface is crucial for the subsequent growth of wetting water films. In the case of mica{,} electrostatic forces and H-bonding to surface O atoms determine the water orientation in the first layer and also in subsequent layers with a strong influence in its wetting characteristics. In the case of oxides like TiO2{,} Cu2O{,} SiO2 and Al2O3{,} surface hydroxyls form readily on defects upon exposure to water vapor and help nucleate the subsequent growth of molecular water films. On pure metals{,} such as Pt{,} Pd and Ru{,} the structure of the first water layer and whether or not it exhibits dangling H-bonds is again crucial. Dangling H-bonds are provided by molecules with their plane oriented vertically{,} or by OH groups formed by the partial dissociation of water. By tying the two H atoms of the water molecules into strong H-bonds with pre-adsorbed O on Ru can also quench the wettability of the surface."
-}
-@ARTICLE{Balajka2018,
-    author = {J. Balajka and M. A. Hines and W. J. I. DeBenedetti and M. Komora and J. Pavelec and M. Schmid and U. Diebold},
-    title = {{High-Affinity Adsorption Leads to Molecularly Ordered Interfaces on TiO\_2 in Air and Solution}},
-    journal = {Science},
-    year = {2018},
-    volume = {361},
-    pages = {786-789},
-    doi = {10.1126/science.aat6752},
-    url = {https://science.sciencemag.org/content/361/6404/786}
 }
 @ARTICLE{Raymond2002,
     author = {E. A. Raymond and T. L. Tarbuck and G. L. Richmond},
@@ -253,7 +250,7 @@
   doi = {https://doi.org/10.1021/jz200697c},
   URL = {https://pubs.acs.org/doi/abs/10.1021/jz200697c}
 }
-@article{Pegram06,
+@article{Pegram2006,
     abstract = {Recently, surface-sensitive spectroscopy data and molecular dynamics simulations have generated intense interest in the distribution of electrolyte ions between bulk water and the air/water interface. A partitioning model for cations and anions developed for biopolymer surface is extended here to interpret the effects of selected acids, bases, and salts on the surface tension of water. Data for electrolytes were analyzed by using a lower-bound value for the number of water molecules in the surface region [0.2 H2O {\AA}−2 (approximately two layers of water)], obtained by assuming that both Na+ and SO4 2− (i.e., Na2SO4) are fully excluded from this region. Surface–bulk partition coefficients of atmospherically relevant anions and the proton are determined. Notably, we find that H+ is most strongly surface-accumulated, I− is modestly accumulated, NO3 − is evenly distributed, and OH− is weakly excluded.},
     author = {Pegram, L. M. and {Record, Jr.}, M. T.},
     doi = {10.1073/pnas.0606256103},
@@ -866,13 +863,24 @@ L'eau est un liquide dont les propriétés sont extraordinaires. Elle a une trè
   abstract = {{(20K+)}},
   url = {https://link.aps.org/doi/10.1103/PhysRevB.47.558}
 }
-@ARTICLE{FHS75,
+#@ARTICLE{FHS75,
+@ARTICLE{Stillinger1975,
     author = {F. H. Stillinger},
     title = {{Theory and Molecular Models for Water}},
     journal = {Adv. Chem. Phys.},
     year = {1975},
     volume = {31},
     pages = {1}
+}
+@ARTICLE{Stillinger1980,
+    author = {F. H. Stillinger},
+    title = {{Water Revisited}},
+    journal = {Science},
+    year = {1980},
+    volume = {209},
+    pages = {451},
+    url = {https://science.sciencemag.org/content/209/4455/451.abstract},
+    doi = {10.1126/science.209.4455.451}
 }
 @ARTICLE{Irwin88,
     author = {J. G. Irwin and M. L. Williams},
@@ -1567,7 +1575,7 @@ ions. The effects of ions on aqueous interfaces have drawn renewed interest for 
     url = {https://pubs.acs.org/doi/abs/10.1021/jp057544d},
     pages = {9674-9680}
 }
-@ARTICLE{Sprik98,
+@ARTICLE{Sprik1998,
     author = {M. Sprik and G. Ciccotti},
     title = {{Free Energy from Constrained Molecular Dynamics}},
     journal = {J. Chem. Phys.},
@@ -3361,7 +3369,7 @@ year = {1984}
     volume = {78},
     pages = {1304}
 }
-@ARTICLE{CCHK89,
+@ARTICLE{Carter1989,
     abstract ={{A computationally efficient molecular dynamics method for estimating the rates of rare events that occur by activated processes is described. The system is constrained at “bottleneck” regions on a general many-body reaction coordinate in order to generate a biased configurational distribution. Suitable reweighting of this biased distribution, along with correct momentum distribution sampling, provides a new ensemble, the constrained-reaction-coordinate-dynamics ensemble, with which to study rare events of this type. Applications to chemical reaction rates are made.}},
     author = {E. A. Carter and G. Ciccotti and  J. T. Hynes and R. Kapral},
     title = {{Constrained Reaction Coordinate Dynamics for the Simulation of Rare Events}},
@@ -4729,6 +4737,19 @@ year = {2004}
     volume = {2},
     year = {2000}
 }
+@article{Tongraar2006,
+    abstract = {On the basis of both HF and B3LYP methods, a well-defined first hydration shell of NO3- is obtainable, but the shell is quite flexible and the hydrogen-bond interactions between NO3- and water are rather weak.
+},
+    author = {Tongraar, A. and Tangkawanwanit, P. and Rode, B. M.},
+    doi = {10.1021/jp064779w},
+    url = {https://pubs.acs.org/doi/abs/10.1021/jp064779w},
+    journal = {J. Phys. Chem. A},
+    volume = {110},
+    number = {47},
+    pages = {12918-12926},
+    title = {{A Combined QM/MM Molecular Dynamics Simulations Study of Nitrate Anion (NO$_3^-$) in Aqueous Solution}},
+    year = {2006}
+}
 @article{Tongraar2010,
     abstract = {The characteristics of an iodide ion (I-) in aqueous solution were investigated by means of HF/MM and B3LYP/MM molecular dynamics simulations, in which the ion and its surrounding water molecules were treated at HF and B3LYP levels using the LANL2DZdp and D95 V+ basis sets for I- and water, respectively. According to both the HF/MM and B3LYP/MM results, the ion-water interactions are relatively weak, compared to the water-water hydrogen bonds, thus causing an unstructured nature of the hydration shell. Comparing the HF and B3LYP treatments for the description of this hydrated ion, the overestimation of the ion-water hydrogen-bond strength by the B3LYP method is recognizable, yielding a remarkably more compact and too rigid ion-water complex. {\textcopyright} 2010 American Chemical Society.},
     author = {Tongraar, A. and Hannongbua, S. and Rode, B. M.},
@@ -4739,7 +4760,7 @@ year = {2004}
     journal = {J. Phys. Chem. A},
     mendeley-groups = {HBD},
     number = {12},
-    pages = {4334--4339},
+    pages = {4334-4339},
     title = {{QM/MM MD Simulations of Iodide Ion (I- ) in Aqueous Solution: A Delicate Balance Between Ion-Water and Water-Water H-bond Interactions}},
     volume = {114},
     year = {2010}
@@ -4916,13 +4937,15 @@ pages = {3308}
 }
 @ARTICLE{Balajka2018,
     author = {J. Balajka and M. A. Hines and W. J. I. DeBenedetti and M. Komora and J. Pavelec and M. Schmid and U. Diebold},
-    title = {{High-Affinity Adsorption Leads to Molecularly Ordered Interfaces on TiO\_2 in Air and Solution}},
+    title = {{High-Affinity Adsorption Leads to Molecularly Ordered Interfaces on TiO$_2$ in Air and Solution}},
     journal = {Science},
     year = {2018},
     volume = {361},
-    pages = {786-789}
+    pages = {786-789},
+    doi = {10.1126/science.aat6752},
+    url = {https://science.sciencemag.org/content/361/6404/786}
 }
-@ARTICLE{2002Raymond,
+@ARTICLE{Raymond2002,
     author = {E. A. Raymond and T. L. Tarbuck and G. L. Richmond},
     title = {{Isotopic Dilution Studies of the Vapor/Water Interface as Investigated by Vibrational Sum-Frequency Spectroscopy}},
     journal = {J. Phys. Chem. B},
@@ -4947,7 +4970,7 @@ pages = {3308}
     volume = {135},
     pages = {124712}
 }
-@ARTICLE{IVS,
+@ARTICLE{Stiopkin2011,
     author = {I. V. Stiopkin and C. Weeraman and P. A. Pieniazek and F. Y. Shalhout and J. L. Skinner and A. V. Benderskii},
     title = {{Hydrogen Bonding at the Water Surface Revealed by Isotopic Dilution Spectroscopy}},
     journal = {Nature},
@@ -8882,19 +8905,6 @@ title = {{Hydrogen Hond Dynamics in Water and Ultrafast Infrared Spectroscopy: A
 volume = {108},
 year = {2004}
 }
-@ARTICLE{Tongraar2010,
-abstract = {The characteristics of an iodide ion (I-) in aqueous solution were investigated by means of HF/MM and B3LYP/MM molecular dynamics simulations, in which the ion and its surrounding water molecules were treated at HF and B3LYP levels using the LANL2DZdp and D95 V+ basis sets for I- and water, respectively. According to both the HF/MM and B3LYP/MM results, the ion-water interactions are relatively weak, compared to the water-water hydrogen bonds, thus causing an unstructured nature of the hydration shell. Comparing the HF and B3LYP treatments for the description of this hydrated ion, the overestimation of the ion-water hydrogen-bond strength by the B3LYP method is recognizable, yielding a remarkably more compact and too rigid ion-water complex. {\textcopyright} 2010 American Chemical Society.},
-author = {Tongraar, A. and Hannongbua, S. and Rode, B. M.},
-doi = {10.1021/jp910435d},
-issn = {10895639},
-journal = {J. Phys. Chem. A},
-mendeley-groups = {HBD},
-title = {{QM/MM MD Simulations of Iodide Ion (I- ) in Aqueous Solution: A Delicate Balance Between Ion-Water and Water-Water H-bond Interactions}},
-volume = {114},
-number = {12},
-pages = {4334--4339},
-year = {2010}
-}
 @ARTICLE{Krausche1992,
 author = {T. Krausche and W. Nadler},
 title = {{Statistical Mechanics of Hydrogen Bond Networks}},
@@ -8982,7 +8992,42 @@ doi = {10.1063/1.4971864},
 URL = {https://aip.scitation.org/doi/abs/10.1063/1.4971864},
 eprint = {https://aip.scitation.org/doi/pdf/10.1063/1.4971864}
 }
-@ARTICLE{ ,
+@article{Fournier2016,
+abstract={Weakly coordinating ions only affect water molecules in the first
+hydration shell; },
+author = {Joseph A. Fournier and William Carpenter and Luigi De Marco and Andrei Tokmakoff},
+title = {Interplay of Ion-Water and Water-Water Interactions within the Hydration Shells of Nitrate and Carbonate Directly Probed with 2D IR Spectroscopy},
+journal = {J. Am. Chem. Soc.},
+volume = {138},
+number = {30},
+pages = {9634-9645},
+year = {2016},
+doi = {10.1021/jacs.6b05122},
+URL = {https://pubs.acs.org/doi/full/10.1021/jacs.6b05122}
+}
+@article{Werhahn2011,
+abstract={The lifetimes of the OH stretching vibrations for the 3 individual bonds are 2.2 ps (weak), 1.7 ps (bifurcated), and 1.2 ps (trong).},
+author = {Jasper C. Werhahn and Stanislav Pandelov and Sotiris S. Xantheas and Hristo Iglev},
+title = {Dynamics of Weak, Bifurcated, and Strong Hydrogen Bonds in Lithium
+Nitrate Trihydrate},
+journal = {J. Phys. Chem. Lett.},
+volume = {2},
+pages = {1633-1638},
+year = {2011},
+doi = {dx.doi.org/10.1021/jz200591v},
+URL = {https://pubs.acs.org/doi/abs/10.1021/jz200591v}
+}
+@ARTICLE{Chanda2006,
+author = {Chanda, J. and Bandyopadhyay, S.},
+title = {{Hydrogen Bond Lifetime Dynamics at the Interface of a Surfactant Monolayer}},
+journal = {J. Phys. Chem. B},
+year = {2006},
+volume = {110},
+number ={46},
+pages = {23443-23449},
+abstract= {{It is observed that the water molecules present in the first hydration layer form strong hydrogen bonds with the surfactant headgroups and hence have longer lifetimes. It is further noticed that water molecules beyond the first hydration layer form weaker hydrogen bonds than pure bulk water. SW HB and WW HB dynamics are studied. }}
+}
+@ARTICLE{,
 author = {},
 title = {{}},
 journal = {},
