--- a/main.tex
+++ b/main.tex
@@ -354,7 +354,7 @@ She is rigorous in academic studies, optimistic and active, and has a wide range
 All these have kept in my heart and gave me greater confidence in future scientific research work.
 
 I wish to thank Prof. Dr. Thomas Kühner, Dr. Giovanni Settanni, Dr. Peter
-Virnau, Dr. Hans Behringer, Prof. Dr. Thomas Speck and in the Institute for
+Virnau, Dr. Hans Behringer and Prof. Dr. Thomas Speck in the Institute for
 Physics for leading me to the fundamental statistical physics and excellent lectures
 and discussions. I am grateful to Prof. Dr. Friederike Schmid and Prof. Dr. Kurt
 Binder for their talks and guidance.
@@ -365,7 +365,13 @@ on the the calculation of response functions. I would like to
 thank my colleagues Leila Salimi, Isidro Lorenzo Geada, Santosh Kumar Meena and Anusha Lalitha, 
 at the Institute for Physics, for their encouragement and assistance.
 
-I am grateful to my parents and my brother for being there for me during the last years.
+I thank Prof. Honggang Luo and Prof. Haiping Fang for their great help in my study and research in China. 
+The cooperation and discussions with Dr. Guosheng Shi, Dr. Bo Zhou and Dr. Chunlei Wang have benefited me a lot. 
+I express my sincere thanks to them.
+
+I thank Prof. Dr. Yuliang Jin for his support, trust and teachings over the past year.
+
+I am grateful to my parents and brother for their care, understanding and support for me in the past few years.
 
 The financial supports of the China Scholarship Council and TRR146 are gratefully acknowledged.
 \end{acknowledgements}
