--- a/example.bib
+++ b/example.bib
@@ -3127,6 +3127,18 @@ year = {1984}
     doi = {10.1103/physrev.188.1407},
     url = {https://journals.aps.org/pr/abstract/10.1103/PhysRev.188.1407}
 }
+@article{Kuehne2020,
+author = {Kühne,Thomas D.  and Iannuzzi,Marcella  and Del Ben,Mauro  and Rybkin,Vladimir V.  and Seewald,Patrick  and Stein,Frederick  and Laino,Teodoro  and Khaliullin,Rustam Z.  and Schütt,Ole  and Schiffmann,Florian  and Golze,Dorothea  and Wilhelm,Jan  and Chulkov,Sergey  and Bani-Hashemian,Mohammad Hossein  and Weber,Valéry  and Borštnik,Urban  and Taillefumier,Mathieu  and Jakobovits,Alice Shoshana  and Lazzaro,Alfio  and Pabst,Hans  and Müller,Tiziano  and Schade,Robert  and Guidon,Manuel  and Andermatt,Samuel  and Holmberg,Nico  and Schenter,Gregory K.  and Hehn,Anna  and Bussy,Augustin  and Belleflamme,Fabian  and Tabacchi,Gloria  and Glöß,Andreas  and Lass,Michael  and Bethune,Iain  and Mundy,Christopher J.  and Plessl,Christian  and Watkins,Matt  and VandeVondele,Joost  and Krack,Matthias  and Hutter,Jürg },
+title = {CP2K: An electronic structure and molecular dynamics software package - Quickstep: Efficient and accurate electronic structure calculations},
+journal = {J. Chem. Phys.},
+volume = {152},
+number = {19},
+pages = {194103},
+year = {2020},
+doi = {10.1063/5.0007045},
+URL = {https://doi.org/10.1063/5.0007045},
+eprint = {https://doi.org/10.1063/5.0007045}
+}
 @ARTICLE{CP2K,
     author = {J. VandeVondele and M. Krack and F. Mohamed and M. Parrinello and T. Chassaing and J. Hutter},
     title = {{Quickstep: Fast and Accurate Density Functional Calculations Using a Mixed Gaussian and Plane Waves Approach}},
