--- a/example.bib
+++ b/example.bib
@@ -1,3 +1,10 @@
+@BOOK{Ball2001,
+  title = {Life's Matrix: A Biography of Water},
+  publisher = {University of California Press},
+  year = {2001},
+  author = {P. Ball},
+  address = {Berkeley and Los Angeles, California}
+}
 @BOOK{MTD,
     author = {M. T. Dove},
     title = {{Introduction to Lattice Dynamics}},
@@ -484,7 +491,7 @@ L'eau est un liquide dont les propriétés sont extraordinaires. Elle a une trè
     eprint = {https://doi.org/10.1063/1.470497}
 }
 @ARTICLE{Naslund2005,
-    author = {Lars-Åke N\"aslund and David C. Edwards and Philippe Wernet and Uwe Bergmann and Hirohito Ogasawara and Lars G. M. Pettersson and Satish Myneni and Anders Nilsson},
+    author = {L.-Å. N\"aslund and D. C. Edwards and P. Wernet and U. Bergmann and H. Ogasawara and L. G. M. Pettersson and S. Myneni and A. Nilsson},
     title = {{X-ray Absorption Spectroscopy Study of the Hydrogen Bond Network in the Bulk Water of Aqueous Solutions}},
     journal = {J. Phys. Chem. A},
     year = {2005},
@@ -730,7 +737,6 @@ L'eau est un liquide dont les propriétés sont extraordinaires. Elle a une trè
   volume = {85},
   issue = {20},
   pages = {4253--4256},
-  numpages = {0},
   year = {2000},
   month = {Nov},
   publisher = {American Physical Society},
@@ -1850,7 +1856,7 @@ abstract= {{Ewald summation expressions are derived for the energy, interatomic 
 @ARTICLE{Khatib16b,
     author = {R. Khatib and T. Hasegawa and M. Sulpizi and E. H. G. Backus and M. Bonn and  Y. Nagata},
     title = {{Molecular Dynamics Simulations of SFG Librational Modes Spectra of Water at the Water-Air Interface}},
-    journal = {J. Phys. Chem. C },
+    journal = {J. Phys. Chem. C},
     year = {2016},
     volume = {120},
     pages = {18665--18673},
@@ -3035,7 +3041,7 @@ url=""
 @Article{allen09,
 author="Xu, M. and Tang, C. Y. and Jubb, A. M. and Chen, X. and Allen, H. C.",
 title="nitrate anions and ion pairing at the air-aqueous interface ",
-journal=" J. Phys. Chem. C  ",
+journal=" J. Phys. Chem. C",
 year="2009",
 publisher="",
 volume="113",
@@ -5283,15 +5289,6 @@ To obtain the vibrations with the highest frequecies $\nu_\text{max}$, the sampl
     DOI = {https://doi.org/10.1007/978-94-009-2157-3_17}
     ISBN = {978-94-009-2157-3}
 }
-@ARTICLE{Sciortino1990prl,
-    author = {F. Sciortino and P. H. Poole and  H. E. Stanley and S. Havlin},
-    title = {{Lifetime of the Bond Network and Gel-Like Anomalies in Supercooled Water}},
-    journal = {Phys. Rev. Lett.},
-    year = {1990},
-    volume = {64},
-    number = {14},
-    pages = {1686}
-}
 @ARTICLE{HX01,
     author = {H. Xu and B. J. Berne},
     title = {{Hydrogen-Bond Kinetics in the Solvation Shell of a Polypeptide}},
@@ -5346,30 +5343,6 @@ To obtain the vibrations with the highest frequecies $\nu_\text{max}$, the sampl
     volume = {93},
     pages = {1697}
 }
-@ARTICLE{VAR04,
-    author = {V. A. Ranea and  A. Michaelides and R. Ram\'{i}rez and P. L. de Andres and  J. A. Verg\'{e}s and D.A.King},
-    title = {{Water Dimer Diffusion on Pd(111) Assisted by an H-Bond Donor-Acceptor Tunneling Exchange}},
-    journal = {Phys. Rev.Lett.},
-    year = {2004},
-    volume = {92},
-    pages = {136104}
-}
-@ARTICLE{GGC76,
-    author = {G. G. Cleveland and D. C. Chang and C. F. Hazlewood and H. E. Rorschach},
-    title = {{Nuclear Magnetic Resonance Measurement of Skeletal Muscle: Anisotrophy of the Diffusion Coefficient of the Intracellular Water}},
-    journal = {Biophysical J.},
-    year = {1976},
-    volume = {16},
-    pages = {1043}
-}
-@ARTICLE{RS91,
-    author = {R. Superfine and J. H. Huang and Y. R. Shen},
-    title = {{Nonlinear Optical Studies of the Pure Liquid/Vapor Interface: Vibrational Spectra and Polar Ordering}},
-    journal = {Phys. Rev. Lett.},
-    year = {1991},
-    volume = {66},
-    pages = {1066}
-}
 @ARTICLE{QD93,
     author = {Q. Du and R. Superfine and E. Freysz and Y. R. Shen},
     title = {{Vibrational Spectroscopy of Water at the Vapor/Water Interface}},
@@ -5378,14 +5351,6 @@ To obtain the vibrations with the highest frequecies $\nu_\text{max}$, the sampl
     volume = {70},
     pages = {2313}
 }
-@ARTICLE{PF00,
-    author = {P. Fischer and D. S. Wiersma and R. Righini and B. Champagne and A. D. Buckingham},
-    title = {{Three-Wave Mixing in Chiral Liquids}},
-    journal = {Phys. Rev. Lett.},
-    year = {2000},
-    volume = {85},
-    pages = {4253}
-}
 @ARTICLE{IVS08,
     author = {I. V. Stiopkin and H. D. Jayathilake and A. N. Bordenyuk and A. V. Benderskii},
     title = {{Heterodyne-Detected Vibrational Sum Frequency Generation Spectroscopy}},
@@ -5393,14 +5358,6 @@ To obtain the vibrations with the highest frequecies $\nu_\text{max}$, the sampl
     year = {2008},
     volume = {130},
     pages = {2271}
-}
-@ARTICLE{VO05,
-    author = {V. Ostroverkhov and G. A. Waychunas and Y. R. Shen },
-    title = {{New information on water interfacial structure revealed by phase-sensitive surface spectroscopy}},
-    journal = {Phys. Rev. Lett.},
-    year = {2005},
-    volume = {94},
-    pages = {046102}
 }
 @ARTICLE{TianCS09,
     author = {C. S. Tian and Y. R. Shen},
@@ -6330,7 +6287,7 @@ abstract= {{ Water in contact with mineral interfaces is important for a variety
 @ARTICLE{Khatib16b,
 author = {R. Khatib and T. Hasegawa and M. Sulpizi and E. H. G. Backus and M. Bonn and  Y. Nagata},
 title = {{Molecular Dynamics Simulations of SFG Librational Modes Spectra of Water at the Water-Air Interface}},
-journal = {J. Phys. Chem. C },
+journal = {J. Phys. Chem. C},
 year = {2016},
 volume = {120},
 pages = {18665} 
@@ -7365,7 +7322,7 @@ url=""
 @Article{allen09,
 author="Xu, M. and Tang, C. Y. and Jubb, A. M. and Chen, X. and Allen, H. C.",
 title="nitrate anions and ion pairing at the air-aqueous interface ",
-journal=" J. Phys. Chem. C  ",
+journal=" J. Phys. Chem. C",
 year="2009",
 publisher="",
 volume="113",
@@ -7384,7 +7341,7 @@ pages={261-265}
 @Article{mundy_ann_rev13,
 author="Douglas J. Tobias and Abraham C. Stern and Marcel D. Baer and  Yan Levin and C.J. Mundy",
 title=" ",
-journal="Annu. Rev. Phys. Chem. ",
+journal="Annu. Rev. Phys. Chem.",
 year="2013",
 publisher="",
 volume="64",
@@ -8977,7 +8934,7 @@ year = "2011",
 issn = "0301-0104",
 doi = "https://doi.org/10.1016/j.chemphys.2011.07.021",
 url = "http://www.sciencedirect.com/science/article/pii/S0301010411003247",
-author = "A. Nilsson and L.G.M. Pettersson",
+author = "A. Nilsson and L. G. M. Pettersson",
 keywords = "Water, Structure, X-ray spectroscopy, X-ray scattering, Molecular dynamics simulations",
 abstract = "We present a picture that combines discussions regarding the thermodynamic anomalies in ambient and supercooled water with recent interpretations of X-ray spectroscopy and scattering data of water in the ambient regime. At ambient temperatures most molecules favor a closer packing than tetrahedral, with strongly distorted hydrogen bonds, which allows the quantized librational modes to be excited and contribute to the entropy, but with enthalpically favored tetrahedrally bonded water patches appearing as fluctuations, i.e. a competition between entropy and enthalpy. Upon cooling water the amount of molecules participating in tetrahedral structures and the size of the tetrahedral patches increase. The two local structures are connected to the liquid–liquid critical point hypothesis in supercooled water corresponding to high density liquid and low density liquid. We will discuss the interpretation of X-ray absorption spectroscopy, X-ray emission spectroscopy, wide and small angle X-ray scattering and molecular dynamics simulations in light of the current debate."
 }
@@ -9038,6 +8995,32 @@ volume = {110},
 number ={46},
 pages = {23443-23449},
 abstract= {{It is observed that the water molecules present in the first hydration layer form strong hydrogen bonds with the surfactant headgroups and hence have longer lifetimes. It is further noticed that water molecules beyond the first hydration layer form weaker hydrogen bonds than pure bulk water. SW HB and WW HB dynamics are studied. }}
+}
+@article{Pettersson2015,
+title = "The Structure of Water: from Ambient to Deeply Supercooled",
+journal = "Journal of Non-Crystalline Solids",
+volume = "407",
+pages = "399 - 417",
+year = "2015",
+note = "7th IDMRCS: Relaxation in Complex Systems",
+issn = "0022-3093",
+doi = "https://doi.org/10.1016/j.jnoncrysol.2014.08.026",
+url = "http://www.sciencedirect.com/science/article/pii/S0022309314004104",
+author = "L. G. M. Pettersson and A. Nilsson",
+keywords = "Water, Supercooled, Liquid–liquid transition, Fluctuations, X-ray scattering",
+abstract = "Here we discuss the structure of water in terms of a temperature-dependent balance between two classes of hydrogen-bonded structures. At high and down to mildly supercooled temperatures most molecules favor a closer packing than tetrahedral, with strongly distorted hydrogen bonds. This allows the quantized librational modes to be excited and contribute to the entropy while the loss of enthalpy due to breaking hydrogen bonds is compensated by enhanced van der Waals interactions. Tetrahedral hydrogen bonding is of lower enthalpy resulting in tetrahedrally bonded water patches appearing, but only as fluctuations with size and life-time increasing at lower temperatures. Measurements of the structure at deeply supercooled conditions show a continuous increase in tetrahedrality which becomes accelerated below the temperature of homogeneous ice nucleation. The two local structures are connected to the liquid–liquid critical point (LLCP) hypothesis in supercooled water and correspond to high density liquid (HDL) and low density liquid (LDL). We propose that both HDL and LDL behave as normal liquids and that the anomalous properties of water result from the transition between them, which occurs over a wide temperature range at ambient pressure. The key issue is the competition between incompatible conditions for maximizing the entropy, favored in HDL, and minimizing the enthalpy, favored in LDL, which leads to the instability in the liquid and is the fundamental origin of the proposed LLCP."
+}
+@article{Speedy1976,
+author = {Speedy, R. J. and Angell, C. A.},
+title = {Isothermal Compressibility of Supercooled Water and Evidence for a Thermodynamic Singularity at -45 $^{\circ}$C},
+journal = {J. Chem. Phys.},
+volume = {65},
+number = {3},
+pages = {851-858},
+year = {1976},
+doi = {10.1063/1.433153},
+URL = {https://doi.org/10.1063/1.433153},
+eprint = {https://doi.org/10.1063/1.433153}
 }
 @ARTICLE{,
 author = {},
