--- a/main.tex
+++ b/main.tex
@@ -564,7 +564,7 @@ $\nu$ & vibrational frequency & \\
 \include{chapters/chap4/chap4} 
 \include{chapters/chap5/chap5} 
 \include{chapters/chap6/chap6} 
-%\include{chapters/chap7/chap7} 
+\include{chapters/chap7/chap7} 
 \include{chapters/chap8/chap8} 
 
 %----------------------------------------------------------------------------------------
