--- a/main.tex
+++ b/main.tex
@@ -381,9 +381,8 @@ I express my sincere thanks to them.
 I thank Prof. Dr. Yuliang Jin for his support, trust and teachings over the past year.
 
 %
-I am also grateful to my parents Yuhua Diao and Dehuai Huang and my brother Jialiang for his care, 
-understanding and support for me in the past few years. 
-I am especially grateful to my dear parents, who have worked hard for decades and nurtured me.
+I am grateful to my parents Yuhua Diao and Dehuai Huang, and my brother Jialiang, for their care, 
+understanding and support for me for decades. 
 
 %
 The financial supports of the China Scholarship Council and TRR146 are gratefully acknowledged.
@@ -576,13 +575,13 @@ $\nu$ & vibrational frequency & \\
 % Include the appendices of the thesis as separate files from the Appendices folder
 % Uncomment the lines as you write the Appendices
 
-%\include{Appendices/AppendixA}
+\include{Appendices/AppendixA}
 \include{chapters/chap_calculation/chap_calculation}
 \include{chapters/chap_parameters/chap_parameters}
 \include{chapters/chap_propensities/chap_propensities}
 \include{chapters/chap_thickness/chap_thickness}
 \include{chapters/chap_hbd_more/chap_hbd_more}
-%\include{chapters/chap_hkt/chap_hkt}
+\include{chapters/chap_hkt/chap_hkt}
 
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
